gas push lagi nih

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <h2 class="text-xl font-bold mb-8 text-white">
           Kampus Mengajar - Meningkatkan literasi bersama.
         </h2>
-        <a href="#"
+        <a href="/program/about.html"
           class="text-white font-semibold px-4 py-2 rounded-full transition duration-100
                   bg-gradient-to-r from-blue-500 to-green-500 
                   hover:from-blue-600 hover:to-green-600">
@@ -78,7 +78,7 @@
               <img src="smkn1cilamaya/people.png" alt="People Icon" class="w-12 h-12 ">
             </div>
             <h3 class="text-lg font-semibold mb-2">Tim Solid</h3>
-            <p class="text-sm text-gray-600">Mahasiswa terpilih dari berbagai universitas terbaik Indonesia</p>
+            <p class="text-sm text-gray-600">Peserta terpilih berasal dari beragam institusi pendidikan tinggi di Indonesia</p>
           </div>
 
           <!-- Card 2 -->
