gas ngoding sampe lupa ngopi

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8 px-4 md:px-0">
           
               <!-- Card 1 -->
-          <div class="group bg-blue-100 rounded-xl p-6 flex flex-col items-center text-center transition duration-300 hover:scale-100 hover:shadow-xl">
+          <div class="group bg-blue-100 rounded-xl p-6 flex flex-col items-center text-center transition duration-300 hover:shadow-xl">
             <div class="bg-white rounded-full p-3 mb-4 transition-transform duration-300 group-hover:scale-110">
               <img src="smkn1cilamaya/people.png" alt="People Icon" class="w-12 h-12 ">
             </div>
@@ -82,7 +82,7 @@
           </div>
 
           <!-- Card 2 -->
-          <div class="group bg-green-100 rounded-xl p-6 flex flex-col items-center text-center transition duration-300 hover:scale-100 hover:shadow-xl">
+          <div class="group bg-green-100 rounded-xl p-6 flex flex-col items-center text-center transition duration-300 hover:shadow-xl">
             <div class="bg-white rounded-full p-3 mb-4 transition-transform duration-300 group-hover:scale-110">
               <img src="smkn1cilamaya/setting.png" alt="Target Icon" class="w-12 h-12">
             </div>
@@ -91,7 +91,7 @@
           </div>
 
           <!-- Card 3 -->
-          <div class="group bg-purple-100 rounded-xl p-6 flex flex-col items-center text-center transition duration-300 hover:scale-100 hover:shadow-xl">
+          <div class="group bg-purple-100 rounded-xl p-6 flex flex-col items-center text-center transition duration-300 hover:shadow-xl">
             <div class="bg-purple-900 rounded-full p-3 mb-4 transition-transform duration-300 group-hover:scale-110">
               <img src="smkn1cilamaya/calendar.png" alt="Calendar Icon" class="w-12 h-12 transition-transform duration-300 group-hover:scale-110">
             </div>
