--- a/program/galeri.html
+++ b/program/galeri.html
@@ -13,16 +13,23 @@
   <!-- Navbar -->
   <nav class="z-20 left-0 right-0 bg-gray-900 shadow-lg px-4 py-4 flex justify-between items-center sticky top-0">
     <!-- Kiri: Logo -->
-    <a href="/index.html" class="group flex items-center bg-gray-900 py-1 px-2 rounded-lg transition duration-100 bg-gradient-to-r hover:from-blue-900 hover:to-blue-400">
-      <img src="/smkn1cilamaya/left-arrow.png" alt="logo" class="h-8 w-10 sm:w-12 sm:h-10" />
-      <h1 class="font-bold text-xl text-gray-200 group-hover:text-white ml-2">Kembali</h1>
-    </a>
+    <a href="/index.html"
+   class="group flex items-center space-x-2 bg-gray-900 py-1 px-3 sm:px-4 rounded-lg transition duration-150 bg-gradient-to-r hover:from-blue-900 hover:to-blue-400">
+  
+  <img src="/smkn1cilamaya/left-arrow.png"
+       alt="logo"
+       class="h-6 w-6 sm:h-8 sm:w-8 object-contain" />
+  
+  <h1 class="text-base sm:text-sm md:text-xl font-bold text-gray-200 group-hover:text-white">
+    Kembali
+  </h1>
+</a>
 
     <!-- Kanan: Nav + Burger -->
     <div class="flex items-center space-x-4">
       <!-- Menu Desktop -->
       <div class="hidden md:flex space-x-2 mr-4">
-        <a href="/program/about.html" class="text-gray-200 hover:text-white transition font-medium hover:bg-gray-800 px-3 py-2 rounded-lg">About</a>
+        <a href="/program/about.html" class="text-gray-200 hover:text-white transition font-medium hover:bg-gray-800 px-3 py-2 rounded-lg">Tentang Kami</a>
         <a href="/program/struktur.html" class="text-gray-200 hover:text-white transition font-medium hover:bg-gray-800 px-3 py-2 rounded-lg">Struktur</a>
         <a href="/program/proker.html" class="text-gray-200 hover:text-white transition font-medium hover:bg-gray-800 px-3 py-2 rounded-lg">Proker</a>
         <a href="/program/galeri.html" class="text-gray-200 hover:text-white transition font-medium bg-gray-800 px-3 py-2 rounded-lg">Galeri</a>
@@ -40,7 +47,7 @@
 
   <!-- Mobile Fullscreen Menu -->
   <div id="mobileMenu" class="fixed inset-0 bg-gray-900 bg-opacity-95 z-50 flex flex-col items-center justify-center space-y-6 transform translate-x-full transition-transform duration-300 md:hidden">
-    <a href="/program/about.html" class="text-white text-2xl font-semibold hover:text-blue-400 transition hover:bg-gray-800 px-3 py-2 rounded-lg">About</a>
+    <a href="/program/about.html" class="text-white text-2xl font-semibold hover:text-blue-400 transition hover:bg-gray-800 px-3 py-2 rounded-lg">Tentang Kami</a>
     <a href="/program/struktur.html" class="text-white text-2xl font-semibold hover:text-blue-400 transition hover:bg-gray-800 px-3 py-2 rounded-lg">Struktur</a>
     <a href="/program/proker.html" class="text-white text-2xl font-semibold hover:text-blue-400 transition hover:bg-gray-800 px-3 py-2 rounded-lg">Proker</a>
     <a href="/program/galeri.html" class="text-white text-2xl font-semibold hover:text-blue-400 transition bg-gray-800 px-3 py-2 rounded-lg">Galeri</a>
@@ -50,35 +57,66 @@
 
 
   <!-- Main Content -->
-<section
-      class="relative bg h-screen flex flex-col justify-start items-center text-center pt-28 overflow-hidden"
-    >
-      <div class="relative z-10 max-w-full px-4 -mt-4">
-        <div class="inline-block bg-blue-200 hover:bg-blue-100 text-indigo-600 hover:text-indigo-900 px-4 py-1 rounded-full text-sm font-medium mb-4">
-          Program Merdeka Belajar
-        </div>
-        <h1 class="text-2xl md:text-6xl font-bold text-black mb-8">
-          Tentang
-          <span class="text-blue-900">Kampus</span>
-          <span class="text-transparent bg-clip-text bg-gradient-to-r from-blue-700 to-green-800">
-            Mengajar
-          </span>
-        </h1>
-        <h2 class="text-xl font-bold mb-8 text-gray-800 max-w-5xl text-justify">
-          Kampus Mengajar Angkatan 8 adalah program dari Kementerian Pendidikan Indonesia
-          yang mengajak mahasiswa untuk langsung terjun ke sekolah-sekolah,
-          khususnya di daerah 3T (terdepan, terluar, tertinggal). Dalam program
-          ini, mahasiswa bukan hanya menjadi pengajar bantu, tapi juga menjadi
-          inspirator, motivator, dan agen perubahan. Mereka membawa semangat
-          baru ke ruang-ruang kelas, membantu literasi dan numerasi, serta
-          mendorong kreativitas di lingkungan sekolah. Jika kamu seorang
-          mahasiswa yang ingin melihat langsung dampak nyata dari ilmu yang kamu
-          pelajari — inilah tempatnya. Kampus Mengajar bukan hanya program
-          pengabdian, tapi perjalanan hidup yang akan membentuk karakter dan
-          wawasanmu.
-        </h2>
+<section class="bg-white py-16 px-4 sm:px-8 lg:px-16">
+  <div class="max-w-7xl mx-auto text-center">
+    <h2 class="text-3xl font-bold mb-4 text-gray-800">Galeri Kegiatan</h2>
+    <p class="text-gray-600 mb-10 text-lg">Dokumentasi kegiatan mahasiswa Kampus Mengajar di SMKN 1 Cilamaya</p>
+
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 mb-24">
+
+      <!-- Gambar -->
+      <!-- HTML image -->
+      <div class="relative group cursor-pointer"
+          onclick="openLightbox('/smkn1cilamaya/album6.jpg', 'Kegiatan Mengajar di Kelas', 'Mahasiswa membantu guru dalam proses pembelajaran di kelas.')">
+        <img src="/smkn1cilamaya/album6.jpg" alt="Kegiatan 1"
+            class="w-full h-64 object-cover rounded-lg shadow-lg transform group-hover:scale-105 transition duration-300">
       </div>
-    </section>
+      <div class="relative group cursor-pointer"
+          onclick="openLightbox('/smkn1cilamaya/album7.jpg', 'Kegiatan Mengajar di Kelas', 'Mahasiswa membantu guru dalam proses pembelajaran di kelas.')">
+        <img src="/smkn1cilamaya/album7.jpg" alt="Kegiatan 1"
+            class="w-full h-64 object-cover rounded-lg shadow-lg transform group-hover:scale-105 transition duration-300">
+      </div>
+      <div class="relative group cursor-pointer"
+          onclick="openLightbox('/smkn1cilamaya/album5.jpg', 'Kegiatan Mengajar di Kelas', 'Mahasiswa membantu guru dalam proses pembelajaran di kelas.')">
+        <img src="/smkn1cilamaya/album5.jpg" alt="Kegiatan 1"
+            class="w-full h-64 object-cover rounded-lg shadow-lg transform group-hover:scale-105 transition duration-300">
+      </div>
+      <div class="relative group cursor-pointer"
+          onclick="openLightbox('/smkn1cilamaya/album8.jpg', 'Kegiatan Mengajar di Kelas', 'Mahasiswa membantu guru dalam proses pembelajaran di kelas.')">
+        <img src="/smkn1cilamaya/album8.jpg" alt="Kegiatan 1"
+            class="w-full h-64 object-cover rounded-lg shadow-lg transform group-hover:scale-105 transition duration-300">
+      </div>
+      <div class="relative group cursor-pointer"
+          onclick="openLightbox('/smkn1cilamaya/album18.jpg', 'Kegiatan Mengajar di Kelas', 'Mahasiswa membantu guru dalam proses pembelajaran di kelas.')">
+        <img src="/smkn1cilamaya/album18.jpg" alt="Kegiatan 1"
+            class="w-full h-64 object-cover rounded-lg shadow-lg transform group-hover:scale-105 transition duration-300">
+      </div>
+      <div class="relative group cursor-pointer"
+          onclick="openLightbox('/smkn1cilamaya/img6.jpg', 'Kegiatan Mengajar di Kelas', 'Mahasiswa membantu guru dalam proses pembelajaran di kelas.')">
+        <img src="/smkn1cilamaya/img6.jpg" alt="Kegiatan 1"
+            class="w-full h-64 object-cover rounded-lg shadow-lg transform group-hover:scale-105 transition duration-300">
+      </div>
+      <!-- Tambahkan lebih banyak gambar sesuai kebutuhan -->
+    </div>
+  </div>
+</section>
+  <!-- Lightbox -->
+  <div id="lightbox" class="fixed inset-0 bg-black bg-opacity-90 hidden items-center justify-center z-50">
+  <div class="relative max-w-4xl w-full mx-4 bg-black rounded-lg shadow-lg p-6 flex flex-col items-center">
+    <!-- Tombol Close -->
+    <button onclick="closeLightbox()" class="absolute top-4 right-4 text-white text-3xl font-bold z-50 hover:text-gray-300 transition">&times;</button>
+
+    <!-- Gambar -->
+    <img id="lightbox-image" src="" alt="" class="max-w-full max-h-[70vh] object-contain rounded-lg" />
+
+    <!-- Judul & Deskripsi -->
+    <div class="mt-4 text-center">
+      <h3 id="lightbox-title" class="text-white text-2xl font-semibold mb-2"></h3>
+      <p id="lightbox-desc" class="text-gray-300 text-base"></p>
+    </div>
+  </div>
+</div>
+
 
   <div id="footer"></div>
   <script src="/js/galeri.js">
