--- a/program/kontak.html
+++ b/program/kontak.html
@@ -13,16 +13,23 @@
   <!-- Navbar -->
   <nav class="z-20 left-0 right-0 bg-gray-900 shadow-lg px-4 py-4 flex justify-between items-center sticky top-0">
     <!-- Kiri: Logo -->
-    <a href="/index.html" class="group flex items-center bg-gray-900 py-1 px-2 rounded-lg transition duration-100 bg-gradient-to-r hover:from-blue-900 hover:to-blue-400">
-      <img src="/smkn1cilamaya/left-arrow.png" alt="logo" class="h-8 w-10 sm:w-12 sm:h-10" />
-      <h1 class="font-bold text-xl text-gray-200 group-hover:text-white ml-2">Kembali</h1>
-    </a>
+    <a href="/index.html"
+   class="group flex items-center space-x-2 bg-gray-900 py-1 px-3 sm:px-4 rounded-lg transition duration-150 bg-gradient-to-r hover:from-blue-900 hover:to-blue-400">
+  
+  <img src="/smkn1cilamaya/left-arrow.png"
+       alt="logo"
+       class="h-6 w-6 sm:h-8 sm:w-8 object-contain" />
+  
+  <h1 class="text-base sm:text-sm md:text-xl font-bold text-gray-200 group-hover:text-white">
+    Kembali
+  </h1>
+</a>
 
     <!-- Kanan: Nav + Burger -->
     <div class="flex items-center space-x-4">
       <!-- Menu Desktop -->
       <div class="hidden md:flex space-x-2 mr-4">
-        <a href="/program/about.html" class="text-gray-200 hover:text-white transition font-medium hover:bg-gray-800 px-3 py-2 rounded-lg">About</a>
+        <a href="/program/about.html" class="text-gray-200 hover:text-white transition font-medium hover:bg-gray-800 px-3 py-2 rounded-lg">Tentang Kami</a>
         <a href="/program/struktur.html" class="text-gray-200 hover:text-white transition font-medium hover:bg-gray-800 px-3 py-2 rounded-lg">Struktur</a>
         <a href="/program/proker.html" class="text-gray-200 hover:text-white transition font-medium hover:bg-gray-800 px-3 py-2 rounded-lg">Proker</a>
         <a href="/program/galeri.html" class="text-gray-200 hover:text-white transition font-medium hover:bg-gray-800 px-3 py-2 rounded-lg">Galeri</a>
@@ -40,7 +47,7 @@
 
   <!-- Mobile Fullscreen Menu -->
   <div id="mobileMenu" class="fixed inset-0 bg-gray-900 bg-opacity-95 z-50 flex flex-col items-center justify-center space-y-6 transform translate-x-full transition-transform duration-300 md:hidden">
-    <a href="/program/about.html" class="text-white text-2xl font-semibold hover:text-blue-400 transition hover:bg-gray-800 px-3 py-2 rounded-lg">About</a>
+    <a href="/program/about.html" class="text-white text-2xl font-semibold hover:text-blue-400 transition hover:bg-gray-800 px-3 py-2 rounded-lg">Tentang Kami</a>
     <a href="/program/struktur.html" class="text-white text-2xl font-semibold hover:text-blue-400 transition hover:bg-gray-800 px-3 py-2 rounded-lg">Struktur</a>
     <a href="/program/proker.html" class="text-white text-2xl font-semibold hover:text-blue-400 transition hover:bg-gray-800 px-3 py-2 rounded-lg">Proker</a>
     <a href="/program/galeri.html" class="text-white text-2xl font-semibold hover:text-blue-400 transition hover:bg-gray-800 px-3 py-2 rounded-lg">Galeri</a>
